--- a/templates/room.html
+++ b/templates/room.html
@@ -10,7 +10,7 @@
     <body data-stream-id="{{.ID}}">
         <div class="content">
             <div class="meta uk-clearfix">
-                <img class="avatar" src="{{.Meta.GravatarURL 60}}" width="60" height="60" />
+                <img class="avatar" src="{{.Meta.GravatarURL 60}}" />
                 <h1 class="name">{{or .Meta.Name (printf "#%s" .ID)}}</h1>
                 <h2 class="creator">{{or .Meta.UserName "anonymous"}}</h2>
                 {{ if .Stream }}
@@ -21,23 +21,25 @@
                 {{- end -}}
             </div>
 
-        {{ if not .Stream }}
-            <div class="player has-video" data-status="error">
-                <svg width="853" height="480"></svg>
-        {{- else -}}
-            <div class="player{{- if .Stream.HasVideo}} has-video{{end -}}
-                              {{- if .Stream.HasAudio}} has-audio{{end -}}" data-status="error">
-                {{- /* `video` with `height: auto` will always use the default aspect ratio.
-                     so instead we enforce the size of this element with an empty image. */ -}}
-                <svg width="{{.Stream.Width}}" height="{{.Stream.Height}}"></svg>
-        {{- end -}}
-                <video></video><div class="controls">
-                    <div class="button mute" title="Mute"></div>
-                    <div class="volume" title="Volume"><div class="slider"></div></div>
-                    <div class="status">not connected</div>
-                    <div class="button theatre" title="Theatre mode"></div>
-                    <div class="button fullscreen" title="Fullscreen"></div>
-                    <div class="button collapse" title="Normal view"></div>
+            <div class="player-block">
+            {{ if not .Stream }}
+                <div class="player has-video" data-status="error">
+                    <svg width="853" height="480"></svg>
+            {{- else -}}
+                <div class="player{{- if .Stream.HasVideo}} has-video{{end -}}
+                                  {{- if .Stream.HasAudio}} has-audio{{end -}}" data-status="error">
+                    {{- /* `video` with `height: auto` will always use the default aspect ratio.
+                        so instead we enforce the size of this element with an empty image. */ -}}
+                    <svg width="{{.Stream.Width}}" height="{{.Stream.Height}}"></svg>
+            {{- end -}}
+                    <video></video><div class="controls">
+                        <div class="button mute" title="Mute"></div>
+                        <div class="volume" title="Volume"><div class="slider"></div></div>
+                        <div class="status">not connected</div>
+                        <div class="button theatre" title="Theatre mode"></div>
+                        <div class="button fullscreen" title="Fullscreen"></div>
+                        <div class="button collapse" title="Normal view"></div>
+                    </div>
                 </div>
             </div>
         </div>
