Allow to view the chat on narrow screens.
(By hovering/clicking/tapping a tab in the corner.)

--- a/templates/room.html
+++ b/templates/room.html
@@ -86,6 +86,7 @@
                     <button class="uk-button uk-button-primary" type="submit">Send</button>
                 </fieldset>
             </form>
+            <div class="tab"></div>
         </aside>
 
         <script src="/static/js/vendored.min.js"></script>
