--- a/static/css/room.css
+++ b/static/css/room.css
@@ -5,6 +5,7 @@ html, body {
 
 body {
     display: flex;
+    overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -290,19 +291,51 @@ body.theatre .player video {
 
 .chat {
     width: 20em;
+    max-width: 80%;
     display: flex;
+    z-index: 1;
+    position: relative;
     flex-direction: column;
     background: #eee;
     box-shadow: 7px 0 10px -10px #000 inset;
+    transition: transform 0.4s ease-out;
 }
 
-@media (max-width: 45em) {
-    .chat {
+@media (max-width: 50em) {
+    .navbar .search input {
         display: none;
     }
 }
 
-.chat > * {
+@media (max-width: 45em) {
+    .chat {
+        margin-right: -20em;
+    }
+
+    .chat .tab {
+        position: absolute;
+        left: -2em;
+        bottom: 0;
+        text-align: right;
+        border-top: 2em solid transparent;
+        border-right: 2em solid #111;
+        transition: opacity 0.4s ease-out;
+    }
+
+    .chat:hover {
+        transform: translateX(-100%);
+    }
+
+    .chat:hover .tab {
+        opacity: 0;
+    }
+
+    body.theatre .player .controls {
+        padding-right: 2em;  /* +1em to move the "collapse" button from under the tab */
+    }
+}
+
+.chat > :not(.tab) {
     padding: 1em;
 }
 
