--- a/templates/error.html
+++ b/templates/error.html
@@ -7,11 +7,8 @@
         <title>webmcast: error {{.Code}}</title>
     </head>
     <body data-error="{{.Code}}">
-        <div class="stretch">
-            <h1 class="stretch">{{.Code}} // {{.DisplayMessage}}</h1>
-            <h1><a href="/">webmcast</a></h1>
-        </div>
-        <div class="muted">
+        <div class="content">
+            <h1><a href="/">webmcast</a> // {{.Code}} // {{.DisplayMessage}}</h1>
             <h2>* {{.DisplayComment}}</h2>
         </div>
     </body>
