--- a/static/css/room.css
+++ b/static/css/room.css
@@ -322,7 +322,7 @@ body.theatre .player video {
     z-index: 1;
     position: relative;
     flex-direction: column;
-    background: #eee;
+    background: #f7f7f7;
     box-shadow: 7px 0 10px -10px #000 inset;
     transition: transform 0.4s ease-in-out;
 }
