--- a/templates/room.html
+++ b/templates/room.html
@@ -90,6 +90,7 @@
         </aside>
 
         <script src="/static/js/vendored.min.js"></script>
+        <script src="/static/js/global.js"></script>
         <script src="/static/js/room.js"></script>
     </body>
 </html>
